--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 .container {
   width: 100%;
-  max-width: 960px; /* optional: set a maximum width for larger screens */
-  margin: 0 auto; /* center the container */
+  max-width: 960px; 
+  margin: 0 auto; 
 }
 
 @font-face {
